Bug 655717 - New attachment pane, make less readable files name in some circumstances when message is open in new window; r=bwinton ui-r=andreasn

--- a/mail/themes/qute/mail/messageWindow.css
+++ b/mail/themes/qute/mail/messageWindow.css
@@ -46,6 +46,10 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
+#messagepanebox {
+  background-color: -moz-dialog;
+}
+
 /* ::::: message header borders ::::: */
 
 #msgHeaderView {
